# evidence-driven-delivery

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  decision.py  evidence.py  main.py  models.py
docs/: 00_concept.md  01_requirements.md  02_risks.md  03_observability.md  04_tests.md  05_release_gate.md  06_public_release_checklist.md  07_positioning.md  08_traceability_to_release.md  09_ai_generated_test_expansion.md
evidence/: README.md  evidence-summary.md  junit.xml  release-decision.json  sample-release-decision.json  sample-test-report.json  test-report.json  traceability-matrix.json  traceability-report.md
scripts/: __init__.py  evaluate_release_gate.py  generate_evidence.py  generate_evidence_summary.py  generate_traceability_matrix.py
tests/: test_decision_fallback.py  test_decision_normal.py  test_evidence_summary.py  test_release_gate.py
