[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-driven-delivery-reference"
version = "0.1.0"
description = "Minimal Evidence-Driven Delivery reference implementation with a local decision engine."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
simple-decision = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docs*", "tests*", "scripts*", "evidence*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
